--- a/static/index.html
+++ b/static/index.html
@@ -5,69 +5,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend</title>
+    <title>EJERCICIO PYTHON ELFEGO</title>
+    <!-- BOOSTRAP-->
     <link rel="stylesheet" href="https://bootswatch.com/5/yeti/bootstrap.min.css" />
 </head>
 
 <body class="bg-secondary">
+    <p class="display-3 p-3 mb-2 bg-warning text-dark text-center" > <b>Catalogo de Productos</b></p>
+
+    <!-- INGRESAR PRODUCTOS-->
     <div class="container">
         <div class="row align-items-start">
 
             <div class="col-md-4 ml-auto col">
-                <h1 class="fs-3 text-center">ABC Catalogo de Productos</h1>
+                <h1 class="fs-3 text-center"> <b>Ingresar Productos</b> </h1>
 
-                <form class="card card-body bg-info text-white" id="userForm">
+                <form class="card card-body bg-light text-dark" id="userForm">
                     <label for="Descripcion">
-                        <h5>Descripcion:</h5>
+                        <h5> <b>Descripcion:</b> </h5>
                     </label>
-                    <input name="descripcion" type="text" placeholder="Descripcion" class="form-control mb-2"
+                    <input name="descripcion" type="text" placeholder="Producto" class="form-control mb-2"
                         required />
 
                     <label for="Precio">
-                        <h5> Precio: </h5>
+                        <h5> <b>Precio: </b> </h5>
                     </label>
                     <input name="precio" type="text" placeholder="Precio" class="form-control mb-2" required />
 
                     <label for="Cantidad">
-                        <h5>Cantidad:</h5>
+                        <h5> <b>Cantidad:</b> </h5>
                     </label>
                     <input name="cantidad" type="text" placeholder="Cantidad" class="form-control mb-2" required />
 
                     <label for="Categoria">
-                        <h5>Categoria:</h5>
+                        <h5> <b>Categoria:</b></h5>
                     </label>
                     <input name="categoria" type="text" placeholder="Categoria" class="form-control mb-2" required />
 
                     <label for="Categoria_ca">
-                        <h5> Descripcion Categoria: </h5>
+                        <h5> <b>Descripcion Categoria:</b> </h5>
                     </label>
                     <input name="descripcion_categoria" type="text" placeholder="Descripcion categoria"
                         class="form-control mb-2" required />
 
-                    <button class="btn btn-primary" width="5">Guardar</button>
+                    <button class="btn btn-primary" width="5"> <b>Guardar</b></button>
                 </form>
 
 
             </div>
+            <!-- ESPACIO PARA COMENTAR LAS ESTADISTICAS -->
+            <div class="col display-4">
+                <br>
+                <p> <em> Estadistica de los <b>Productos</b> por su <b>Categoria</b> </em> </p>
+            </div>
 
+            <!-- GRAFICA DE LOS PRODUCTOS-->
             <div class="col">
-                <h2>Grafica </h2>
-                <canvas id="grafica" class="w-50 h-50"> </canvas>
+                <h2 ><b>Grafica</b> </h2>
+                <canvas id="grafica"> </canvas>
             </div>
         </div>
 
     </div>
 
-    <div class="w-25 row align-items-start">
-        <!-- User's List -->
-        <ul id="userList" class="list-group"></ul>
+
+    <!-- LISTADO DE LOS PRODUCTOS-->
+    <p class="display-5 p-3 mb-2 bg-danger text-white text-center">Tabla de los <b>Productos</b> </p>
+    <div class="container">
+            <div class="row align-items-start">
+                <div class="col">
+                    <!-- User's List -->
+                    <ul id="userList" class="list-group"></ul>
+                </div>
+            </div>
     </div>
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+    <!-- CREAMOS LA GRAFICA -->
     <script>
         // Obtenemos los datos de la gráfica desde el servidor
         fetch('/datos_grafica_productos_categoria')
@@ -100,6 +116,8 @@
 
         console.log(grafica.width); // 300
     </script>
+
+    <!-- LLAMAMOS A JAVASCRIPT-->
     <script src="/static/main.js"></script>
 </body>
 
